--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,8 @@
     "module": "ES2015",
     "target": "ES2015",
     "strict": true,
-    "noEmitOnError": true
+    "noEmitOnError": true,
+    "strictNullChecks":false,
   },
   "outDir": "./dist"
 }
